# roleplayingMCP

./: .gitignore  CONTEXT.md  Dockerfile  PLAN.md  README.md  dice_parser.py  docker-compose.yml  history.py  pyproject.toml  server.py
src/roleplaying_dice_mcp/: __init__.py  config.py  dice_parser.py  history.py  models.py  roller.py  server.py
src/roleplaying_dice_mcp/strategies/: __init__.py  base.py  degrees.py  pools.py  rolls.py
tests/: test_trpg_scenario.py
