[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roleplaying-dice-mcp"
version = "4.0.0"
description = "MCP server for TRPG dice rolling — standard notation, dice pools, advantage, critical detection, and more"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
roleplaying-dice-mcp = "roleplaying_dice_mcp:main"
